# rules_zitadel

./: .gitignore  BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl
.github/workflows/: ci.yml
config/: BUILD.bazel  zitadel-cnpg-values.yaml  zitadel-external-pg-values.yaml  zitadel-values.yaml
private/manifests/: BUILD.bazel  postgres-standalone.yaml  zitadel-cnpg.yaml  zitadel-db-cluster.yaml  zitadel-external-pg.yaml  zitadel.yaml
tests/: BUILD.bazel  analysis_tests.bzl  cnpg_health_wrapper.sh  cnpg_install_wrapper.sh  health_wrapper.sh  health_wrapper_cnpg.sh  health_wrapper_external_pg.sh  install_wrapper.sh  install_wrapper_cnpg.sh  install_wrapper_external_pg.sh  smoke_test.sh  smoke_test_cnpg.sh  smoke_test_external_pg.sh
tools/: BUILD.bazel  extensions.bzl  render_zitadel.sh  repositories.bzl  versions.bzl  writeback.sh
