"""rules_zitadel — hermetic Zitadel IAM install for Bazel test compositions."""

module(
    name = "rules_zitadel",
    version = "0.3.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "rules_kubectl", version = "0.2.0")
git_override(
    module_name = "rules_kubectl",
    remote = "https://github.com/collider-bazel-extensions/rules_kubectl",
    commit = "81b60ab80df46b64c612f2576ffef0a7af98ccb6",  # v0.2.0
)

# ---- dev-only: smoke composition --------------------------------------------
bazel_dep(name = "rules_itest", version = "0.0.52", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.8.0", dev_dependency = True)

bazel_dep(name = "rules_kind", version = "0.1.2", dev_dependency = True)
git_override(
    module_name = "rules_kind",
    remote = "https://github.com/collider-bazel-extensions/rules_kind",
    commit = "b9c4670646f8e3772816f56a048e311d5310a763",  # v0.1.2
)

bazel_dep(name = "rules_helm", version = "0.2.1", dev_dependency = True)
git_override(
    module_name = "rules_helm",
    remote = "https://github.com/collider-bazel-extensions/rules_helm",
    commit = "48651387d55f0c50f6d059df246ed73767100afb",  # v0.2.1
)

helm = use_extension("@rules_helm//:extensions.bzl", "helm", dev_dependency = True)
helm.version(version = "3.20.2")
use_repo(
    helm,
    "helm_darwin_amd64",
    "helm_darwin_arm64",
    "helm_linux_amd64",
)
register_toolchains(
    "@helm_linux_amd64//:toolchain",
    "@helm_darwin_amd64//:toolchain",
    "@helm_darwin_arm64//:toolchain",
    dev_dependency = True,
)

zitadel_chart = use_extension("//tools:extensions.bzl", "zitadel_chart", dev_dependency = True)
zitadel_chart.version(version = "9.34.0")
use_repo(zitadel_chart, "zitadel_chart_9_34_0")

# ---- v0.3 smoke: CNPG operator dependency -----------------------------------
# `zitadel_install_cnpg` requires the CNPG operator already installed.
# rules_cloudnativepg ships the `cloudnativepg_install` macro; the
# in-tree smoke chains it as an itest_service dep before applying the
# Zitadel + Cluster manifests.
bazel_dep(name = "rules_cloudnativepg", version = "0.1.0", dev_dependency = True)
git_override(
    module_name = "rules_cloudnativepg",
    remote = "https://github.com/collider-bazel-extensions/rules_cloudnativepg",
    commit = "f64b2419be8c97e42673939312d3353951925b72",  # v0.1.0
)
