"""Tests for rules_zitadel.

- Analysis test verifies the macro instantiates cleanly.
- Smoke composition: kind cluster + Zitadel (single Deployment +
  chart-bundled Postgres StatefulSet + init/setup Jobs). Smoke
  `kubectl run`s a curl pod, GETs /.well-known/openid-configuration
  + /oauth/v2/keys, asserts both return valid OIDC artifacts —
  proves DB migrations + signing-key generation + the issuer all
  work end-to-end.
"""

load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_zitadel//:defs.bzl", "zitadel_health_check", "zitadel_install")
load(":analysis_tests.bzl", "zitadel_install_test_suite")

# ---- analysis ---------------------------------------------------------------

zitadel_install_test_suite(name = "zitadel_install_analysis")

# ---- smoke composition ------------------------------------------------------

kind_cluster(name = "cluster", k8s_version = "1.32")

kind_health_check(name = "cluster_health", cluster = ":cluster")

itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

zitadel_install(
    name = "zitadel_install_bin",
    tags = ["manual"],
)

zitadel_health_check(
    name = "zitadel_health_bin",
    tags = ["manual"],
)

sh_binary(
    name = "zitadel_install_wrapper",
    srcs = ["install_wrapper.sh"],
    data = [":zitadel_install_bin"],
)

sh_binary(
    name = "zitadel_health_wrapper",
    srcs = ["health_wrapper.sh"],
    data = [":zitadel_health_bin"],
)

itest_service(
    name = "zitadel_svc",
    exe = ":zitadel_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":zitadel_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":zitadel_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",
        "no-sandbox",
        "requires-network",
    ],
)
