"""Maintainer-only render flow."""

load("@rules_helm//:defs.bzl", "helm_template")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ---- 9.34.0 -----------------------------------------------------------------

helm_template(
    name = "render_zitadel_9_34_0",
    chart = ["@zitadel_chart_9_34_0//:files"],
    values = ["//config:zitadel-values.yaml"],
    namespace = "zitadel",
    release_name = "zitadel",
)

sh_binary(
    name = "render_writeback_9_34_0",
    srcs = ["writeback.sh"],
    data = [":render_zitadel_9_34_0"],
    args = [
        "$(rootpath :render_zitadel_9_34_0)",
        "private/manifests/zitadel.yaml",
    ],
    visibility = ["//visibility:public"],
)

# ---- 9.34.0 external-Postgres variant ---------------------------------------
# Same chart, different values. `postgresql.enabled: false` drops
# the bundled Bitnami subchart; Zitadel is pointed at the
# separately-deployed Postgres in private/manifests/postgres-standalone.yaml
# via the chart's discrete Database.Postgres.* configmap fields.

helm_template(
    name = "render_zitadel_external_pg_9_34_0",
    chart = ["@zitadel_chart_9_34_0//:files"],
    values = ["//config:zitadel-external-pg-values.yaml"],
    namespace = "zitadel",
    release_name = "zitadel",
)

sh_binary(
    name = "render_writeback_external_pg_9_34_0",
    srcs = ["writeback.sh"],
    data = [":render_zitadel_external_pg_9_34_0"],
    args = [
        "$(rootpath :render_zitadel_external_pg_9_34_0)",
        "private/manifests/zitadel-external-pg.yaml",
    ],
    visibility = ["//visibility:public"],
)

# ---- 9.34.0 CNPG variant ----------------------------------------------------
# Zitadel pointed at a CNPG-managed Cluster (see
# private/manifests/zitadel-db-cluster.yaml — the Cluster CR is
# hand-rolled, not chart-rendered). The render here is just the
# Zitadel side with `postgresql.enabled: false` and the discrete
# Database.Postgres.* fields pointed at zitadel-db-rw.

helm_template(
    name = "render_zitadel_cnpg_9_34_0",
    chart = ["@zitadel_chart_9_34_0//:files"],
    values = ["//config:zitadel-cnpg-values.yaml"],
    namespace = "zitadel",
    release_name = "zitadel",
)

sh_binary(
    name = "render_writeback_cnpg_9_34_0",
    srcs = ["writeback.sh"],
    data = [":render_zitadel_cnpg_9_34_0"],
    args = [
        "$(rootpath :render_zitadel_cnpg_9_34_0)",
        "private/manifests/zitadel-cnpg.yaml",
    ],
    visibility = ["//visibility:public"],
)
